Clean up project, prepare for cuda integration

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 stb_image_write.h
 stb_image.h
 .vscode/settings.json
-.vscode/settings.json
 image.png
 *.png
 *.jpg
 rtw_stb_image.h
+*.exp
+*.lib
+*.obj
